src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) void aruco_ArucoDetector_detectMarkersMultiDict_0(void* self, void* image, void* corners, void* ids, void* rejectedImgPoints, void* dictIndices);
extern "C" __declspec(dllexport) void* aruco_ArucoDetector_getDictionary_0(void* self);
extern "C" __declspec(dllexport) void aruco_ArucoDetector_setDictionary_0(void* self, void* dictionary);
extern "C" __declspec(dllexport) void* aruco_ArucoDetector_getDictionaries_0(void* self);
extern "C" __declspec(dllexport) void aruco_ArucoDetector_setDictionaries_0(void* self, void* dictionaries);
extern "C" __declspec(dllexport) void* aruco_ArucoDetector_getDetectorParameters_0(void* self);
extern "C" __declspec(dllexport) void aruco_ArucoDetector_setDetectorParameters_0(void* self, void* detectorParameters);
extern "C" __declspec(dllexport) void* aruco_ArucoDetector_getRefineParameters_0(void* self);
extern "C" __declspec(dllexport) void aruco_ArucoDetector_setRefineParameters_0(void* self, void* refineParameters);
extern "C" __declspec(dllexport) void aruco_ArucoDetector_write_0(void* self, void* fs, const char* name);
extern "C" __declspec(dllexport) void aruco_ArucoDetector_read_0(void* self, void* fn);
extern "C" __declspec(dllexport) void aruco_Board_Delete(void* self);
extern "C" __declspec(dllexport) void* aruco_Board_New_0(void* objPoints, void* dictionary, void* ids);
extern "C" __declspec(dllexport) void* aruco_Board_getDictionary_0(void* self);
extern "C" __declspec(dllexport) void* aruco_Board_getObjPoints_0(void* self);
extern "C" __declspec(dllexport) void* aruco_Board_getIds_0(void* self);
extern "C" __declspec(dllexport) void* aruco_Board_getRightBottomCorner_0(void* self);
extern "C" __declspec(dllexport) void aruco_Board_matchImagePoints_0(void* self, void* detectedCorners, void* detectedIds, void* objPoints, void* imgPoints);
extern "C" __declspec(dllexport) void aruco_Board_generateImage_0(void* self, cv::Size outSize, void* img, int marginSize, int borderBits);
extern "C" __declspec(dllexport) void aruco_CharucoBoard_Delete(void* self);
extern "C" __declspec(dllexport) void* aruco_CharucoBoard_New_0(cv::Size size, float squareLength, float markerLength, void* dictionary, void* ids);
extern "C" __declspec(dllexport) void aruco_CharucoBoard_setLegacyPattern_0(void* self, bool legacyPattern);
extern "C" __declspec(dllexport) bool aruco_CharucoBoard_getLegacyPattern_0(void* self);
extern "C" __declspec(dllexport) cv::Size aruco_CharucoBoard_getChessboardSize_0(void* self);
extern "C" __declspec(dllexport) float aruco_CharucoBoard_getSquareLength_0(void* self);
extern "C" __declspec(dllexport) float aruco_CharucoBoard_getMarkerLength_0(void* self);
extern "C" __declspec(dllexport) void* aruco_CharucoBoard_getChessboardCorners_0(void* self);
extern "C" __declspec(dllexport) bool aruco_CharucoBoard_checkCharucoCornersCollinear_0(void* self, void* charucoIds);
extern "C" __declspec(dllexport) void aruco_CharucoDetector_Delete(void* self);
extern "C" __declspec(dllexport) void* aruco_CharucoDetector_New_0(void* board, void* charucoParams, void* detectorParams, void* refineParams);
extern "C" __declspec(dllexport) void* aruco_CharucoDetector_getBoard_0(void* self);
extern "C" __declspec(dllexport) void aruco_CharucoDetector_setBoard_0(void* self, void* board);
extern "C" __declspec(dllexport) void* aruco_CharucoDetector_getCharucoParameters_0(void* self);
extern "C" __declspec(dllexport) void aruco_CharucoDetector_setCharucoParameters_0(void* self, void* charucoParameters);
extern "C" __declspec(dllexport) void* aruco_CharucoDetector_getDetectorParameters_0(void* self);
extern "C" __declspec(dllexport) void aruco_CharucoDetector_setDetectorParameters_0(void* self, void* detectorParameters);
extern "C" __declspec(dllexport) void* aruco_CharucoDetector_getRefineParameters_0(void* self);
extern "C" __declspec(dllexport) void aruco_CharucoDetector_setRefineParameters_0(void* self, void* refineParameters);
extern "C" __declspec(dllexport) void aruco_CharucoDetector_detectBoard_0(void* self, void* image, void* charucoCorners, void* charucoIds, void* markerCorners, void* markerIds);
extern "C" __declspec(dllexport) void aruco_CharucoDetector_detectDiamonds_0(void* self, void* image, void* diamondCorners, void* diamondIds, void* markerCorners, void* markerIds);
extern "C" __declspec(dllexport) void aruco_CharucoParameters_Delete(void* self);
extern "C" __declspec(dllexport) void* aruco_CharucoParameters_New_0();
extern "C" __declspec(dllexport) void* aruco_CharucoParameters_cameraMatrix_get(void* self);
extern "C" __declspec(dllexport) void aruco_CharucoParameters_cameraMatrix_set(void* self, void* val);
extern "C" __declspec(dllexport) void* aruco_CharucoParameters_distCoeffs_get(void* self);
extern "C" __declspec(dllexport) void aruco_CharucoParameters_distCoeffs_set(void* self, void* val);
extern "C" __declspec(dllexport) int aruco_CharucoParameters_minMarkers_get(void* self);
extern "C" __declspec(dllexport) void aruco_CharucoParameters_minMarkers_set(void* self, int val);
extern "C" __declspec(dllexport) bool aruco_CharucoParameters_tryRefineMarkers_get(void* self);
extern "C" __declspec(dllexport) void aruco_CharucoParameters_tryRefineMarkers_set(void* self, bool val);
extern "C" __declspec(dllexport) bool aruco_CharucoParameters_checkMarkers_get(void* self);
extern "C" __declspec(dllexport) void aruco_CharucoParameters_checkMarkers_set(void* self, bool val);
extern "C" __declspec(dllexport) void aruco_DetectorParameters_Delete(void* self);
extern "C" __declspec(dllexport) void* aruco_DetectorParameters_New_0();
extern "C" __declspec(dllexport) bool aruco_DetectorParameters_readDetectorParameters_0(void* self, void* fn);
extern "C" __declspec(dllexport) bool aruco_DetectorParameters_writeDetectorParameters_0(void* self, void* fs, const char* name);