src/OpenCV5Sharp/Generated/NativeMethods.Objdetect.cs

        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_ArucoDetector_detectMarkersMultiDict_0(ArucoArucoDetectorHandle self, MatHandle image, IntPtr corners, MatHandle ids, IntPtr rejectedImgPoints, IntPtr dictIndices);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr aruco_ArucoDetector_getDictionary_0(ArucoArucoDetectorHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_ArucoDetector_setDictionary_0(ArucoArucoDetectorHandle self, IntPtr dictionary);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr aruco_ArucoDetector_getDictionaries_0(ArucoArucoDetectorHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_ArucoDetector_setDictionaries_0(ArucoArucoDetectorHandle self, IntPtr dictionaries);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr aruco_ArucoDetector_getDetectorParameters_0(ArucoArucoDetectorHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_ArucoDetector_setDetectorParameters_0(ArucoArucoDetectorHandle self, IntPtr detectorParameters);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr aruco_ArucoDetector_getRefineParameters_0(ArucoArucoDetectorHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_ArucoDetector_setRefineParameters_0(ArucoArucoDetectorHandle self, IntPtr refineParameters);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_ArucoDetector_write_0(ArucoArucoDetectorHandle self, FileStorageHandle fs, [MarshalAs(UnmanagedType.LPUTF8Str)] string? name);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_ArucoDetector_read_0(ArucoArucoDetectorHandle self, FileNodeHandle fn);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_Board_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr aruco_Board_New_0(IntPtr objPoints, IntPtr dictionary, MatHandle ids);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr aruco_Board_getDictionary_0(ArucoBoardHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr aruco_Board_getObjPoints_0(ArucoBoardHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr aruco_Board_getIds_0(ArucoBoardHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr aruco_Board_getRightBottomCorner_0(ArucoBoardHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_Board_matchImagePoints_0(ArucoBoardHandle self, IntPtr detectedCorners, MatHandle detectedIds, MatHandle objPoints, MatHandle imgPoints);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_Board_generateImage_0(ArucoBoardHandle self, Size outSize, MatHandle img, int marginSize, int borderBits);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_CharucoBoard_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr aruco_CharucoBoard_New_0(Size size, float squareLength, float markerLength, IntPtr dictionary, IntPtr ids);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_CharucoBoard_setLegacyPattern_0(ArucoCharucoBoardHandle self, [MarshalAs(UnmanagedType.U1)] bool legacyPattern);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool aruco_CharucoBoard_getLegacyPattern_0(ArucoCharucoBoardHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Size aruco_CharucoBoard_getChessboardSize_0(ArucoCharucoBoardHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float aruco_CharucoBoard_getSquareLength_0(ArucoCharucoBoardHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float aruco_CharucoBoard_getMarkerLength_0(ArucoCharucoBoardHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr aruco_CharucoBoard_getChessboardCorners_0(ArucoCharucoBoardHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool aruco_CharucoBoard_checkCharucoCornersCollinear_0(ArucoCharucoBoardHandle self, MatHandle charucoIds);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_CharucoDetector_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr aruco_CharucoDetector_New_0(IntPtr board, IntPtr charucoParams, IntPtr detectorParams, IntPtr refineParams);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr aruco_CharucoDetector_getBoard_0(ArucoCharucoDetectorHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_CharucoDetector_setBoard_0(ArucoCharucoDetectorHandle self, IntPtr board);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr aruco_CharucoDetector_getCharucoParameters_0(ArucoCharucoDetectorHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_CharucoDetector_setCharucoParameters_0(ArucoCharucoDetectorHandle self, IntPtr charucoParameters);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr aruco_CharucoDetector_getDetectorParameters_0(ArucoCharucoDetectorHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_CharucoDetector_setDetectorParameters_0(ArucoCharucoDetectorHandle self, IntPtr detectorParameters);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr aruco_CharucoDetector_getRefineParameters_0(ArucoCharucoDetectorHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_CharucoDetector_setRefineParameters_0(ArucoCharucoDetectorHandle self, IntPtr refineParameters);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_CharucoDetector_detectBoard_0(ArucoCharucoDetectorHandle self, MatHandle image, MatHandle charucoCorners, MatHandle charucoIds, IntPtr markerCorners, IntPtr markerIds);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_CharucoDetector_detectDiamonds_0(ArucoCharucoDetectorHandle self, MatHandle image, IntPtr diamondCorners, MatHandle diamondIds, IntPtr markerCorners, IntPtr markerIds);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_CharucoParameters_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr aruco_CharucoParameters_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr aruco_CharucoParameters_cameraMatrix_get(ArucoCharucoParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_CharucoParameters_cameraMatrix_set(ArucoCharucoParametersHandle self, IntPtr val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr aruco_CharucoParameters_distCoeffs_get(ArucoCharucoParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_CharucoParameters_distCoeffs_set(ArucoCharucoParametersHandle self, IntPtr val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int aruco_CharucoParameters_minMarkers_get(ArucoCharucoParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_CharucoParameters_minMarkers_set(ArucoCharucoParametersHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool aruco_CharucoParameters_tryRefineMarkers_get(ArucoCharucoParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_CharucoParameters_tryRefineMarkers_set(ArucoCharucoParametersHandle self, [MarshalAs(UnmanagedType.U1)] bool val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool aruco_CharucoParameters_checkMarkers_get(ArucoCharucoParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_CharucoParameters_checkMarkers_set(ArucoCharucoParametersHandle self, [MarshalAs(UnmanagedType.U1)] bool val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_DetectorParameters_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr aruco_DetectorParameters_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool aruco_DetectorParameters_readDetectorParameters_0(ArucoDetectorParametersHandle self, FileNodeHandle fn);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool aruco_DetectorParameters_writeDetectorParameters_0(ArucoDetectorParametersHandle self, FileStorageHandle fs, [MarshalAs(UnmanagedType.LPUTF8Str)] string? name);
